gitops/platform/security/policies/patch-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSP
metadata:
  name: pod-must-run-as-nonroot
  annotations:
    argocd.argoproj.io/sync-wave: "1"
