gitops/platform/security/policies/patch-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spsp
  annotations:
    argocd.argoproj.io/sync-wave: "0"
