gitops/platform/security/policies/pss-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsp
spec:
  crd:
    spec:
      names:
        kind: K8sPSP
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8spsp

      violation[{
        "msg": msg,
        "details": {"missing": missing},
      }] {
        input.review.kind.kind == "Pod"
        container := input.review.object.spec.containers[_]
        not container.securityContext.runAsNonRoot
        msg := sprintf("container %v must runAsNonRoot", [container.name])
        missing := "runAsNonRoot"
      }
